Reuse full-day completion projections